--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="jquery-3.1.1.min.js"></script>
-    <script src="scripts.js"></script>
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/scripts.js"></script>
     <title>Address Book</title>
   </head>
   <body>
@@ -27,6 +27,14 @@
           <h2>Contacts:</h2>
           <ul id="contacts">
           </ul>
+        </div>
+        <div class"col-md-6">
+          <div id="show-contact">
+            <h2></h2>
+
+            <p>First name: <span class="first-name"></span></p>
+            <p>Last name: <span class="last-name"></span></p>
+          </div>
         </div>
       </div>
     </div>
